log
Sat, Mar 22, 2025  3:56:21 PM: 
 exercises.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:10: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   64 |    valor = first(L);
      |          ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:10: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   85 |    valor = first(L);
      |          ^
exercises.c:91:11: error: 'return' with a value, in function returning void [-Werror=return-type]
   91 |    return 0;
      |           ^
exercises.c:82:6: note: declared here
   82 | void eliminaElementos(List*L, int elem)
      |      ^~~~~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4829cc2
Sat, Mar 22, 2025  3:59:04 PM: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:10: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   64 |    valor = first(L);
      |          ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   85 |    valor = (int)first(L);
      |            ^
cc1.exe: all warnings being treated as errors
Compilation failed
5cbff0c
Sat, Mar 22, 2025  3:59:28 PM: 
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:10: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
   64 |    valor = first(L);
      |          ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   85 |    valor = (int)first(L);
      |            ^
cc1.exe: all warnings being treated as errors
Compilation failed
c4d849b
Sat, Mar 22, 2025  3:59:43 PM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:64:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   64 |    valor = (int)first(L);
      |            ^
exercises.c: In function 'eliminaElementos':
exercises.c:85:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   85 |    valor = (int)first(L);
      |            ^
cc1.exe: all warnings being treated as errors
Compilation failed
b01f116
Sat, Mar 22, 2025  4:01:51 PM: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:68:15: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   68 |       suma += (int)valor;
      |               ^
exercises.c: In function 'eliminaElementos':
exercises.c:86:12: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   86 |    valor = (int)first(L);
      |            ^
cc1.exe: all warnings being treated as errors
Compilation failed
aebef9a
Sat, Mar 22, 2025  4:04:02 PM: 
 exercises.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:68:15: error: cast from pointer to integer of different size [-Werror=pointer-to-int-cast]
   68 |       suma += (int)valor;
      |               ^
exercises.c: In function 'eliminaElementos':
exercises.c:92:16: error: comparison between pointer and integer [-Werror]
   92 |       if(valor == elem) popCurrent(L);
      |                ^~
cc1.exe: all warnings being treated as errors
Compilation failed
15ab7d3
Sat, Mar 22, 2025  4:07:14 PM: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function 'sumaLista':
exercises.c:68:15: error: invalid use of incomplete typedef 'List'
   68 |       suma += (*valor);
      |               ^
exercises.c:63:17: error: variable 'suma' set but not used [-Werror=unused-but-set-variable]
   63 |    int control, suma = 0;
      |                 ^~~~
exercises.c: In function 'eliminaElementos':
exercises.c:92:10: error: invalid use of incomplete typedef 'List'
   92 |       if((*valor) == elem) popCurrent(L);
      |          ^
cc1.exe: all warnings being treated as errors
Compilation failed
96ebd32
